<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1C2C2"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF9800"
        android:id="@+id/rlt_activity_add_note"
        android:padding="15dp"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:textColor="#ffff"
            android:layout_centerInParent="true"
            android:text="@string/update_student"
            />
        <ImageView
            android:layout_width="24dp"
            android:layout_alignParentLeft="true"
            android:layout_height="24dp"
            android:id="@+id/imv_back1"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_back_white_24dp"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/lnl_activity_add_note"
        android:background="#ffff"
        android:orientation="vertical"
        android:layout_below="@+id/rlt_activity_add_note"
        android:layout_width="match_parent"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_name"
            android:id="@+id/edit_text_title1"
            android:textColor="#000000"
            android:textSize="16sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_desscription1"
            android:hint="@string/input_year_birth"
            android:inputType="number"
            android:textColor="#000000"
            android:textSize="16sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_home_town"
            android:textColor="#000000"
            android:id="@+id/edt_home_town1"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:background="#ffff"
        android:padding="15dp"
        android:layout_below="@+id/lnl_activity_add_note"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="16sp"
            android:text="@string/priority"
            />
        <NumberPicker
            android:id="@+id/number_picker_priority1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="#fff"
            android:layout_marginLeft="100dp"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="vertical"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="15dp"
        android:background="#ffff"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        >
        <Button
            android:layout_width="0dp"
            android:background="#D305F5"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/save_note1"
            android:text="@string/update"
            android:textColor="#ffff"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:textColor="#ffff"
            android:id="@+id/btn_delete1"
            android:text="@string/delete"
            android:background="#0229F0"
            />
    </LinearLayout>
</RelativeLayout>